--- a/README
+++ b/README
@@ -1,7 +1,9 @@
+As a part of a course I took in education:
+
 By the end of this lab, you will have acquired a better understanding of SMTP protocol. 
 You will also gain experience in implementing a standard protocol using Python.
 
 Your task is to develop a simple mail client that sends email to any recipient. 
 Your client will need to connect to a mail server, dialogue with the mail server using the SMTP protocol, and send an email message to the mail server. 
 Python provides a module, called smtplib, which has built-in methods to send mail using SMTP protocol. 
-However, you will not be using this module in this lab, because it hides the details of SMTP and socket programming. 
+However, you will not be using this module in this lab, because it hides the details of SMTP and socket programming.
